localization kullanımı eklendi

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -3,4 +3,6 @@
 @using Tradebox.Models.ViewModels
 @using Tradebox.Components
 @using Tradebox.Services
+@using Tradebox.Extensions
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, Tradebox
